added images and enhanced the code

--- a/index.html
+++ b/index.html
@@ -83,18 +83,13 @@
                     <div class="hero-content">
                         <div class="hero-badge" role="status" aria-live="polite">
                             <span class="badge-icon">🏆</span>
-                            <span class="badge-text">#1 Packaging Partner Since 2020</span>
-                        </div>
+                            <span class="badge-text">#1 Packaging Partner in India</span>
+                        </div> 
 
                         <h1 class="hero-heading">
                             Transform Your Products with
                             <span class="hero-accent">Premium Packaging</span>
                         </h1>
-
-                        <p class="hero-description">
-                            Custom-designed pouches that elevate your brand. From concept to delivery in just 7 days.
-                            Zero setup costs, unlimited creativity, and guaranteed satisfaction.
-                        </p>
 
                         <div class="hero-metrics">
                             <div class="metric-item">
@@ -106,7 +101,7 @@
                                 <div class="metric-label">Day Delivery</div>
                             </div>
                             <div class="metric-item">
-                                <div class="metric-number">$0</div>
+                                <div class="metric-number">0₹</div>
                                 <div class="metric-label">Setup Cost</div>
                             </div>
                         </div>
@@ -234,7 +229,7 @@
                             </div>
                             <div class="feature-content">
                                 <h3 class="feature-title">Transparent Pricing</h3>
-                                <p class="feature-description">$0 setup costs, flexible MOQ from 3,000 pieces. Quality without compromise.</p>
+                                <p class="feature-description">0₹ setup costs, flexible MOQ from 3,000 pieces. Quality without compromise.</p>
                             </div>
                         </div>
 
@@ -332,7 +327,7 @@
                             <div class="testimonial-author">
                                 <div class="author-avatar">🧑‍💼</div>
                                 <div class="author-info">
-                                    <div class="author-name">Sarah Johnson</div>
+                                    <div class="author-name">Ms. Kanyakumari</div>
                                     <div class="author-company">Premium Foods Co.</div>
                                 </div>
                             </div>
@@ -346,7 +341,7 @@
                             <div class="testimonial-author">
                                 <div class="author-avatar">👩‍💼</div>
                                 <div class="author-info">
-                                    <div class="author-name">Michael Chen</div>
+                                    <div class="author-name">Mr. Manoj</div>
                                     <div class="author-company">Artisan Snacks</div>
                                 </div>
                             </div>
@@ -355,12 +350,12 @@
                         <div class="testimonial-card">
                             <div class="testimonial-content">
                                 <div class="testimonial-stars">★★★★★</div>
-                                <p class="testimonial-text">"Professional team, sustainable materials, and consistent quality. Our go-to packaging partner for 3 years."</p>
+                                <p class="testimonial-text">"Professional team, sustainable materials, and consistent quality. Our go-to packaging partner."</p>
                             </div>
                             <div class="testimonial-author">
                                 <div class="author-avatar">🧑‍🔬</div>
                                 <div class="author-info">
-                                    <div class="author-name">Dr. Emily Rodriguez</div>
+                                    <div class="author-name">Mr. Suresh</div>
                                     <div class="author-company">Green Organics Ltd.</div>
                                 </div>
                             </div>
@@ -385,11 +380,11 @@
                             <div class="cta-contact-info">
                                 <div class="contact-method">
                                     <span class="contact-icon">📧</span>
-                                    <span class="contact-text">info@goodlookpouch.com</span>
+                                    <span class="contact-text">chappahemanthk@gmail.com</span>
                                 </div>
                                 <div class="contact-method">
                                     <span class="contact-icon">📱</span>
-                                    <span class="contact-text">WhatsApp: +1 (555) 012-3456</span>
+                                    <span class="contact-text">WhatsApp: +91 9652960041</span>
                                 </div>
                             </div>
                         </div>
@@ -457,53 +452,33 @@
             <!-- Hero Carousel -->
             <div class="hero-carousel" role="region" aria-label="Product showcase carousel">
                 <div class="carousel-slide active">
-                    <img src="images/standup-pouch12.png" alt="Standup Pouch packaging solution" class="carousel-image">
+                    <img src="images/standup-pouch-slide-1.png" alt="Standup Pouch packaging solution" class="carousel-image">
                     <div class="carousel-overlay">
                         <h2 class="carousel-title">Premium Standup Pouches</h2>
-                        <p class="carousel-description">Perfect for retail display and self-standing packaging</p>
-                        <div class="carousel-cta">
-                            <a href="#services" class="cta-button primary">Explore Our Products</a>
-                        </div>
                     </div>
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/pillow-pouch.png" alt="Center Sealed Pouches packaging solution" class="carousel-image">
+                    <img src="images/pillow-pouch-slide-2.jpg" alt="Center Sealed Pouches packaging solution" class="carousel-image">
                     <div class="carousel-overlay">
                         <h2 class="carousel-title">Versatile Center Sealed Pouches</h2>
-                        <p class="carousel-description">Ideal for various food and non-food products</p>
-                        <div class="carousel-cta">
-                            <a href="#services" class="cta-button primary">View Options</a>
-                        </div>
                     </div>
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/coffee-valve-pouch.jpg" alt="Standup Pouch with Coffee Valve packaging solution" class="carousel-image">
+                    <img src="images/coffee-valve-pouch-slider-3.jpg" alt="Standup Pouch with Coffee Valve packaging solution" class="carousel-image">
                     <div class="carousel-overlay">
                         <h2 class="carousel-title">Coffee Valve Pouches</h2>
-                        <p class="carousel-description">Specialized for coffee with degassing valves</p>
-                        <div class="carousel-cta">
-                            <a href="#services" class="cta-button primary">Learn More</a>
-                        </div>
-                    </div>
+                    </div>  
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/zipper-pouch.jpg" alt="3 Side Seal Zipper packaging solution" class="carousel-image">
+                    <img src="images/spout-pouch-slider-4.jpg" alt="3 Side Seal Zipper packaging solution" class="carousel-image">
                     <div class="carousel-overlay">
-                        <h2 class="carousel-title">Resealable Zipper Pouches</h2>
-                        <p class="carousel-description">Convenient multiple-use packaging solutions</p>
-                        <div class="carousel-cta">
-                            <a href="#services" class="cta-button primary">Discover Now</a>
-                        </div>
+                        <h2 class="carousel-title">Spout Pouches</h2>
                     </div>
                 </div>
                 <div class="carousel-slide">
-                    <img src="images/energy-bar-pouch.jpg" alt="Energy Bar Pouch packaging solution" class="carousel-image">
+                    <img src="images/energy-bar-pouch-slider-5.jpg" alt="Energy Bar Pouch packaging solution" class="carousel-image">
                     <div class="carousel-overlay">
                         <h2 class="carousel-title">Energy Bar Pouches</h2>
-                        <p class="carousel-description">Custom designed for energy bars and snacks</p>
-                        <div class="carousel-cta">
-                            <a href="#services" class="cta-button primary">See Designs</a>
-                        </div>
                     </div>
                 </div>
 
@@ -544,11 +519,11 @@
             <div class="contact-section">
                 <h2 class="contact-headline">Contact Us</h2>
                 <div class="contact-buttons">
-                    <a href="#" class="contact-btn whatsapp" id="whatsapp-btn" aria-label="Contact us on WhatsApp">
+                    <a href="#" class="contact-btn whatsapp" id="whatsapp-btn" aria-label="Contact us on WhatsApp" target="_blank">
                         <span>📱</span>
                         WhatsApp
                     </a>
-                    <a href="#" class="contact-btn call" id="call-btn" aria-label="Call us now">
+                    <a href="#" class="contact-btn call" id="call-btn" aria-label="Call us now" target="_blank">
                         <span>📞</span>
                         Call Now
                     </a>
@@ -649,9 +624,9 @@
                     </div>
                 </div>
                 <div class="service-card">
-                    <img src="images/zipper-pouch.jpg" alt="Zipper Pouch" class="service-image">
+                    <img src="images/spout-pouch.jpg" alt="Zipper Pouch" class="service-image">
                     <div class="service-content">
-                        <h2 class="service-title">Zipper Pouches</h2>
+                        <h2 class="service-title">spout Pouches</h2>
                         <p class="service-description">Resealable zipper pouches for multiple-use convenience and freshness.</p>
                     </div>
                 </div>
@@ -682,7 +657,7 @@
                         <div class="stat-label">Minimum Order</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-number">$0</div>
+                        <div class="stat-number">0₹</div>
                         <div class="stat-label">Setup Cost</div>
                     </div>
                     <div class="stat-item">
@@ -944,7 +919,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p id="footer-copyright">© 2024 GoodLook Pouch. All rights reserved.</p>
+            <p id="footer-copyright">© 2026 GoodLook Pouch. All rights reserved.</p>
         </div>
     </footer>
 
