--- a/index.html
+++ b/index.html
@@ -919,7 +919,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p id="footer-copyright">© 2026 GoodLook Pouch. All rights reserved.</p>
+            <p> © 2026 GoodLook Pouch. All rights reserved.</p>
         </div>
     </footer>
 
