--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
         "logo": "https://goodlookpouch.com/images/logo.png",
         "contactPoint": {
             "@type": "ContactPoint",
-            "telephone": "+1-555-0123",
+            "telephone": "+919652960041",
             "contactType": "customer service"
         },
         "address": {
             "@type": "PostalAddress",
-            "streetAddress": "123 Industrial Drive",
-            "addressLocality": "Manufacturing City",
-            "addressRegion": "State",
-            "postalCode": "12345",
-            "addressCountry": "US"
+            "streetAddress": "Suchitra ",
+            "addressLocality": "Hyderabad City",
+            "addressRegion": "Telangana",
+            "postalCode": "500055",
+            "addressCountry": "INDIA"
         },
         "sameAs": [
             "https://www.facebook.com/goodlookpouch",
