--- a/index.html
+++ b/index.html
@@ -69,8 +69,25 @@
                 <a href="#about" class="nav-link" aria-label="Go to about page">About</a>
                 <a href="#contact" class="nav-link" aria-label="Go to contact page">Contact</a>
             </nav>
+
+            <!-- Mobile Menu Toggle -->
+            <button class="mobile-menu-toggle" aria-label="Toggle mobile menu" aria-expanded="false">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </button>
         </div>
     </header>
+
+    <!-- Mobile Navigation Overlay -->
+    <div class="nav-overlay" id="nav-overlay">
+        <nav class="mobile-nav" id="mobile-nav">
+            <a href="#home" class="mobile-nav-link">Home</a>
+            <a href="#services" class="mobile-nav-link">Services</a>
+            <a href="#about" class="mobile-nav-link">About</a>
+            <a href="#contact" class="mobile-nav-link">Contact</a>
+        </nav>
+    </div>
 
     <main class="main-content">
         <!-- HOME PAGE -->
@@ -515,20 +532,6 @@
                 </section>
             </div>
 
-            <!-- Contact Section -->
-            <div class="contact-section">
-                <h2 class="contact-headline">Contact Us</h2>
-                <div class="contact-buttons">
-                    <a href="#" class="contact-btn whatsapp" id="whatsapp-btn" aria-label="Contact us on WhatsApp" target="_blank">
-                        <span>📱</span>
-                        WhatsApp
-                    </a>
-                    <a href="#" class="contact-btn call" id="call-btn" aria-label="Call us now" target="_blank">
-                        <span>📞</span>
-                        Call Now
-                    </a>
-                </div>
-            </div>
 
             <!-- FAQ Section -->
             <section class="faq-section" aria-labelledby="faq-title">
@@ -778,6 +781,20 @@
         <section id="contact" class="section" aria-labelledby="contact-page-title">
             <h1 id="contact-page-title" class="visually-hidden">Contact GoodLook Pouch</h1>
 
+            <div class="contact-section">
+                <h2 class="contact-headline">Contact Us</h2>
+                <div class="contact-buttons">
+                    <a href="#" class="contact-btn whatsapp" id="whatsapp-btn" aria-label="Contact us on WhatsApp" target="_blank">
+                        <span>📱</span>
+                        WhatsApp
+                    </a>
+                    <a href="#" class="contact-btn call" id="call-btn" aria-label="Call us now" target="_blank">
+                        <span>📞</span>
+                        Call Now
+                    </a>
+                </div>
+            </div>
+            
             <div class="contact-grid">
                 <div class="contact-card">
                     <div class="contact-icon">📍</div>
@@ -883,6 +900,18 @@
             </div>
         </section>
     </main>
+
+    <!-- FLOATING CONTACT BUTTONS -->
+    <div class="floating-contact-buttons">
+        <div class="floating-btn whatsapp-btn" id="floating-whatsapp-btn" aria-label="Contact us on WhatsApp" title="Chat with us on WhatsApp">
+            <span class="floating-icon">💬</span>
+            <span class="floating-label">WhatsApp</span>
+        </div>
+        <div class="floating-btn call-btn" id="floating-call-btn" aria-label="Call us now" title="Call us now">
+            <span class="floating-icon">📞</span>
+            <span class="floating-label">Call Now</span>
+        </div>
+    </div>
 
     <!-- FOOTER -->
     <footer class="footer" id="footer">
