--- a/index.html
+++ b/index.html
@@ -903,14 +903,12 @@
 
     <!-- FLOATING CONTACT BUTTONS -->
     <div class="floating-contact-buttons">
-        <div class="floating-btn whatsapp-btn" id="floating-whatsapp-btn" aria-label="Contact us on WhatsApp" title="Chat with us on WhatsApp">
+        <a href="#" class="floating-btn whatsapp-btn" id="floating-whatsapp-btn" aria-label="Contact us on WhatsApp" title="Chat with us on WhatsApp" target="_blank" rel="noopener noreferrer">
             <span class="floating-icon">💬</span>
-            <span class="floating-label">WhatsApp</span>
-        </div>
-        <div class="floating-btn call-btn" id="floating-call-btn" aria-label="Call us now" title="Call us now">
+        </a>
+        <a href="#" class="floating-btn call-btn" id="floating-call-btn" aria-label="Call us now" title="Call us now" target="_blank" rel="noopener noreferrer">
             <span class="floating-icon">📞</span>
-            <span class="floating-label">Call Now</span>
-        </div>
+        </a>
     </div>
 
     <!-- FOOTER -->
