added icon , robots,sitemap files and add link to logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="GoodLook Pouch">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://goodlookpouch.com/">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📊</text></svg>" type="image/svg+xml">
+    <link rel="icon" href="images/logo.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -59,10 +59,12 @@
     <!-- HEADER SECTION -->
     <header class="header">
         <div class="header-content">
-            <div class="logo">
-                <img src="images/logo.png" alt="GoodLook Pouch Logo" class="logo-icon">
-                <div class="logo-text">GoodLook Pouch</div>
-            </div>
+            <a href="#home" class="logo-link" aria-label="Go to home page">
+                <div class="logo">
+                    <img src="images/logo.png" alt="GoodLook Pouch Logo" class="logo-icon">
+                    <div class="logo-text">GoodLook Pouch</div>
+                </div>
+            </a>
             <nav class="nav" role="navigation" aria-label="Main navigation">
                 <a href="#home" class="nav-link" aria-label="Go to home page">Home</a>
                 <a href="#services" class="nav-link" aria-label="Go to services page">Services</a>
