updated contact details and redirection links

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
         "logo": "https://goodlookpouch.com/images/logo.png",
         "contactPoint": {
             "@type": "ContactPoint",
-            "telephone": "+919652960041",
+            "telephone": "+919652480915",
             "contactType": "customer service"
         },
         "address": {
             "@type": "PostalAddress",
-            "streetAddress": "Suchitra ",
+            "streetAddress": "plot 177 MN reddy nagar,Suchitra ",
             "addressLocality": "Hyderabad City",
             "addressRegion": "Telangana",
-            "postalCode": "500055",
+            "postalCode": "500064",
             "addressCountry": "INDIA"
         },
         "sameAs": [
@@ -412,11 +412,11 @@
                             <div class="cta-contact-info">
                                 <div class="contact-method">
                                     <span class="contact-icon">📧</span>
-                                    <span class="contact-text">chappahemanthk@gmail.com</span>
+                                    <span class="contact-text">sales@goodlookpouch.com</span>
                                 </div>
                                 <div class="contact-method">
                                     <span class="contact-icon">📱</span>
-                                    <span class="contact-text">WhatsApp: +91 9652960041</span>
+                                    <span class="contact-text">WhatsApp: +91 9652480915</span>
                                 </div>
                             </div>
                         </div>
@@ -681,11 +681,11 @@
             <div class="contact-section">
                 <h2 class="contact-headline">Contact Us</h2>
                 <div class="contact-buttons">
-                    <a href="#" class="contact-btn whatsapp" id="whatsapp-btn" aria-label="Contact us on WhatsApp" target="_blank">
+                    <a href="https://wa.me/919652480915?text=Hello%20GoodLook%20Pouch%2C%20I%20am%20interested%20in%20your%20packaging%20services" class="contact-btn whatsapp" id="whatsapp-btn" aria-label="Contact us on WhatsApp" target="_blank">
                         <span>📱</span>
                         WhatsApp
                     </a>
-                    <a href="#" class="contact-btn call" id="call-btn" aria-label="Call us now" target="_blank">
+                    <a href="tel:+919652480915" class="contact-btn call" id="call-btn" aria-label="Call us now">
                         <span>📞</span>
                         Call Now
                     </a>
@@ -696,22 +696,22 @@
                 <div class="contact-card">
                     <div class="contact-icon">📍</div>
                     <h2 class="contact-title">Address</h2>
-                    <p class="contact-value" id="contact-address">123 Industrial Drive<br>Manufacturing City, State 12345</p>
+                    <p class="contact-value" id="contact-address">plot 177 Mn reddy nagar,Suchitra <br>Hyderabad, Telangana 500064</p>
                 </div>
                 <div class="contact-card">
                     <div class="contact-icon">📱</div>
                     <h2 class="contact-title">WhatsApp</h2>
-                    <p class="contact-value" id="contact-whatsapp">+1 (555) 012-3456</p>
+                    <p class="contact-value" id="contact-whatsapp">+91 9652480915</p>
                 </div>
                 <div class="contact-card">
                     <div class="contact-icon">📞</div>
                     <h2 class="contact-title">Phone</h2>
-                    <p class="contact-value" id="contact-phone">+1 (555) 012-3456</p>
+                    <p class="contact-value" id="contact-phone">+91 9652480915</p>
                 </div>
                 <div class="contact-card">
                     <div class="contact-icon">✉️</div>
                     <h2 class="contact-title">Email</h2>
-                    <p class="contact-value" id="contact-email">info@goodlookpouch.com</p>
+                    <p class="contact-value" id="contact-email">sales@goodlookpouch.com</p>
                 </div>
             </div>
         </section>
@@ -800,10 +800,10 @@
 
     <!-- FLOATING CONTACT BUTTONS -->
     <div class="floating-contact-buttons">
-        <a href="#" class="floating-btn whatsapp-btn" id="floating-whatsapp-btn" aria-label="Contact us on WhatsApp" title="Chat with us on WhatsApp" target="_blank" rel="noopener noreferrer">
+        <a href="https://wa.me/919652480915?text=Hello%20GoodLook%20Pouch%2C%20I%20am%20interested%20in%20your%20packaging%20services" class="floating-btn whatsapp-btn" id="floating-whatsapp-btn" aria-label="Contact us on WhatsApp" title="Chat with us on WhatsApp" target="_blank" rel="noopener noreferrer">
             <img src="images/whatsapp.png" alt="WhatsApp" class="floating-icon whatsapp-icon">
         </a>
-        <a href="#" class="floating-btn call-btn" id="floating-call-btn" aria-label="Call us now" title="Call us now" target="_blank" rel="noopener noreferrer">
+        <a href="tel:+919652480915" class="floating-btn call-btn" id="floating-call-btn" aria-label="Call us now" title="Call us now" target="_blank" rel="noopener noreferrer">
             <span class="floating-icon">📞</span>
         </a>
     </div>
@@ -827,9 +827,9 @@
             <div class="footer-section">
                 <h3>Contact Info</h3>
                 <div class="footer-links">
-                    <div id="footer-address">123 Industrial Drive<br>Manufacturing City, State 12345</div>
-                    <div id="footer-phone">+1 (555) 012-3456</div>
-                    <div id="footer-email">info@goodlookpouch.com</div>
+                    <div id="footer-address">plot 177 <br>Mn reddy nagar ,suchitra, Hyderabad, Telangana 500064</div>
+                    <div id="footer-phone">+91 9652480915</div>
+                    <div id="footer-email">sales@goodlookpouch.com</div>
                 </div>
             </div>
             <div class="footer-section">
