updated code and removed customer reviews section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 
     <!-- Open Graph Tags -->
@@ -30,8 +31,8 @@
         "@type": "Organization",
         "name": "GoodLook Pouch",
         "description": "Premium pouch manufacturing company specializing in custom packaging solutions",
-        "url": "https://goodlookpouch.com/",
-        "logo": "https://goodlookpouch.com/images/logo.png",
+        "url": "https://www.goodlookpouch.com/",
+        "logo": "https://www.goodlookpouch.com/images/logo.png",
         "contactPoint": {
             "@type": "ContactPoint",
             "telephone": "+919652480915",
@@ -46,7 +47,7 @@
             "addressCountry": "INDIA"
         },
         "sameAs": [
-            "https://www.facebook.com/goodlookpouch",
+            "https://www.facebook.com/people/Goodlookpouch/61586138901420",
             "https://www.instagram.com/goodlookpouch",
             "https://www.linkedin.com/company/goodlookpouch",
             "https://www.youtube.com/@goodlookpouch"
@@ -186,7 +187,7 @@
                     <h2 id="features-title" class="visually-hidden">Our Key Features</h2>
                     <div class="feature-card">
                         <div class="feature-icon">📊</div>
-                        <h3 class="feature-title">Minimum Orders 3,000 pcs</h3>
+                        <h3 class="feature-title">Minimum Orders 2,000 pcs</h3>
                         <p class="feature-description">Flexible ordering with competitive pricing for small to large scale production.</p>
                     </div>
                     <div class="feature-card">
@@ -261,7 +262,7 @@
                             </div>
                             <div class="feature-content">
                                 <h3 class="feature-title">Transparent Pricing</h3>
-                                <p class="feature-description">0₹ setup costs, flexible MOQ from 3,000 pieces. Quality without compromise.</p>
+                                <p class="feature-description">0₹ setup costs, flexible MOQ from 2,000 pieces. Quality without compromise.</p>
                             </div>
                         </div>
 
@@ -342,59 +343,7 @@
                 </div>
             </section>
 
-            <!-- Testimonials Section -->
-            <section class="testimonials-section" aria-labelledby="testimonials-heading">
-                <div class="testimonials-container">
-                    <div class="testimonials-header">
-                        <h2 id="testimonials-heading" class="testimonials-title">What Our Customers Say</h2>
-                        <p class="testimonials-subtitle">Trusted by businesses worldwide</p>
-                    </div>
-
-                    <div class="testimonials-grid">
-                        <div class="testimonial-card">
-                            <div class="testimonial-content">
-                                <div class="testimonial-stars">★★★★★</div>
-                                <p class="testimonial-text">"Exceptional quality and lightning-fast delivery. GoodLook Pouch transformed our product packaging completely."</p>
-                            </div>
-                            <div class="testimonial-author">
-                                <div class="author-avatar">🧑‍💼</div>
-                                <div class="author-info">
-                                    <div class="author-name">Ms. Kanyakumari</div>
-                                    <div class="author-company">Premium Foods Co.</div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="testimonial-card">
-                            <div class="testimonial-content">
-                                <div class="testimonial-stars">★★★★★</div>
-                                <p class="testimonial-text">"The customization options are incredible. Zero setup costs made it possible for our small business to compete."</p>
-                            </div>
-                            <div class="testimonial-author">
-                                <div class="author-avatar">👩‍💼</div>
-                                <div class="author-info">
-                                    <div class="author-name">Mr. Manoj</div>
-                                    <div class="author-company">Artisan Snacks</div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="testimonial-card">
-                            <div class="testimonial-content">
-                                <div class="testimonial-stars">★★★★★</div>
-                                <p class="testimonial-text">"Professional team, sustainable materials, and consistent quality. Our go-to packaging partner."</p>
-                            </div>
-                            <div class="testimonial-author">
-                                <div class="author-avatar">🧑‍🔬</div>
-                                <div class="author-info">
-                                    <div class="author-name">Mr. Suresh</div>
-                                    <div class="author-company">Green Organics Ltd.</div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
+            
 
             <!-- Final CTA Section -->
             <section class="final-cta-section">
@@ -442,7 +391,7 @@
                             <span class="faq-toggle">+</span>
                         </div>
                         <div class="faq-answer">
-                            <p>Our minimum order quantity starts at 3,000 pieces for most pouch types. This allows us to maintain quality standards and provide competitive pricing.</p>
+                            <p>Our minimum order quantity starts at 2,000 pieces for most pouch types. This allows us to maintain quality standards and provide competitive pricing.</p>
                         </div>
                     </div>
 
@@ -835,10 +784,10 @@
             <div class="footer-section">
                 <h3>Follow Us</h3>
                 <div class="social-links">
-                    <a href="#" class="social-link" id="footer-facebook" aria-label="Follow us on Facebook">📘</a>
-                    <a href="#" class="social-link" id="footer-instagram" aria-label="Follow us on Instagram">📷</a>
-                    <a href="#" class="social-link" id="footer-linkedin" aria-label="Follow us on LinkedIn">💼</a>
-                    <a href="#" class="social-link" id="footer-youtube" aria-label="Follow us on YouTube">📺</a>
+                    <a href="https://www.facebook.com/people/Goodlookpouch/61586138901420" class="social-link" id="footer-facebook" aria-label="Follow us on Facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/goodlookpouch" class="social-link" id="footer-instagram" aria-label="Follow us on Instagram" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/company/goodlookpouch" class="social-link" id="footer-linkedin" aria-label="Follow us on LinkedIn" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.youtube.com/@goodlookpouch" class="social-link" id="footer-youtube" aria-label="Follow us on YouTube" target="_blank"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
         </div>
