--- a/index.html
+++ b/index.html
@@ -792,7 +792,8 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p id="footer-copyright">> © 2026 GoodLook Pouch. All rights reserved.</p>
+            <p id="footer-copyright"> © 2026 GoodLook Pouch.</p>
+            <p id="footer-company"> SH Flexibles private limited. All Rights Reserved.</p>
         </div>
     </footer>
 
